:bug: foot socialmedia media spacing bug

--- a/src/_assets/scss/partials/_footer.scss
+++ b/src/_assets/scss/partials/_footer.scss
@@ -36,7 +36,7 @@
     @extend .justify-content-md-end, .justify-content-center;
     
     .nav-link {
-      @extend .py-0, .mt-2; 
+      @extend .py-0, .mt-2, .px-0; 
 
       &:last-child {
         padding-right: 0;
@@ -45,7 +45,7 @@
   }
 
   .nav-socialmedia{
-    @extend .justify-content-md-end, .justify-content-center;
+    @extend .justify-content-md-end, .justify-content-center, .my-3, .my-md-0;
 
     .socialmedia-icon {
       @extend .mx-1;
